--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@ body {
   padding: 0px;
   margin: 0px;
   
+  
 }
 
 code {
@@ -16,10 +17,12 @@ code {
 }
 
 div#page {
-  width: 1000px;
+  /*width: 1000px;*/
+  width: 90%;
   margin-left: auto;
   margin-right: auto;
   background-color: #dca!important;
+  background-image: url('./crissXcross.png');
   overflow:auto;
 }
 
