--- a/src/index.css
+++ b/src/index.css
@@ -21,8 +21,8 @@ div#page {
   width: 90%;
   margin-left: auto;
   margin-right: auto;
-  background-color: #dca!important;
-  background-image: url('./crissXcross.png');
+ /* background-color: #dca!important;
+  background-image: url('./crissXcross.png'); */
   overflow:auto;
 }
 
