--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;500&display=swap');
 
-
 body {
   font-family: "Montserrat", sans-serif;
   background-color: #456;
   padding: 0px;
   margin: 0px;
   font-size: 14px;
-  
 }
 
 code {
@@ -21,11 +19,109 @@ div#page {
   width: 90%;
   margin-left: auto;
   margin-right: auto;
- /* background-color: #dca!important;
-  background-image: url('./crissXcross.png'); */
+ /* background-color: #dca!important; */
+  background-image: url('./crissXcross.png');
   overflow:auto;
+}
+
+div.player_detail{
+  width: 800px;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: #dca!important;
+  background-image: url('./crissXcross.png');
+  padding: 10px;
 }
 
 div#root{
   text-align: center;
+}
+
+
+.wrapper{
+  padding: 10px;
+  width: 300px;
+  float: left;
+}
+
+table#stats{
+  width: 275px;
+  border-collapse: collapse;
+  border: solid 1px #ccc;
+  background-color: #fff;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+table#player_detail{
+  width: 400px;
+  margin-left: auto;
+  margin-right: auto;
+  border-collapse: collapse;
+  border: solid 1px #ccc;
+  background-color: #fff;
+}
+
+table#stats td.center{
+  border: solid 1px #ccc;
+  padding: 5px;
+  font-weight: 200;
+  text-align: center;
+  background-color: #fff;
+}
+
+table#stats th{
+  border: solid 1px #ccc;
+  padding: 5px;
+  font-weight: 500;
+  background-color: #fff;
+}
+
+td.left, th.left{
+  text-align: left;
+  border: solid 1px #ccc;
+  padding: 5px;
+  font-weight: 200;
+  background-color: #fff;
+}
+
+.ball_icon{
+  float: left;
+  width: 30px;
+  margin-right: 5px;
+  animation-name: spin;
+  animation-duration: 1s;
+  z-index: -1000;
+  margin-left: 20px;
+  margin-top: 6px;
+}
+
+div.heading h1{
+  color:  #eee;
+  float: left;
+  font-size: 18px;
+}
+
+div.headwrap{
+  margin-left: auto;
+  margin-right: auto;
+}
+
+div.heading{
+  vertical-align: middle;
+  /*width: 300px;*/
+  height: 55px;
+  display: grid;
+}
+
+@keyframes spin {
+  from {transform: translateX(300px) rotate(0deg); }
+  to {transform:  translateX(0px) rotate(720deg);}
+}
+
+div#webgl{
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  z-index: -1000;
 }
