--- a/src/index.css
+++ b/src/index.css
@@ -1,32 +1,35 @@
 @import url('https://fonts.googleapis.com/css2?family=Abel&display=swap');
 
 .ball_icon{
-  width: 25px;
+  width: 30px;
 }
 
 body{
   background-image:url('./crissXcross.png')!important;
 }
 
-div.content_box{
-  background-color: #eee;
-}
 
-a{
-  text-decoration: none;
-}
-
-.table, .table-condensed{
-  font-size: 16px;
-  font-family: "Abel", sans-serif;
-}
 
 div.container{
+  background-color: #eee;
   width: 85%;
+  padding: 0px;
 }
 
 img.tiny_image{
-  width: 100px;
-  margin-left:auto;
-  margin-right:auto;
+  width: 50px;
+}
+
+table{
+  font-size: 14px;
+  line-height: 0.5;
+
+}
+
+td.left, th{
+  padding-left: 10px!important;
+}
+
+td.text-end, td.end{
+  text-align: right;
 }
